# dsc

./: .gitignore  CMakeLists.txt  README.md  avl.cpp  avl.hpp  btree.hpp  common.hpp  dsc.cpp  gl.c  rbtree.cpp  rbtree.hpp  tinyfiledialogs.h  tts.cpp  tts.h
glad/: gl.h
